--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,14 @@ body {
 }
 
 h1 {
-    font-family: Monoton;
+    font-family: 'Orbitron', sans-serif;
     font-size: 70px;
     margin: 0.2em;
 }
 
 h2 {
     margin: 1em 0 0.25em;
+    font-family: 'Raleway', sans-serif;
 }
 
 h2:first-of-type {
